--- a/toolkit/mozapps/extensions/test/xpinstall/browser.ini
+++ b/toolkit/mozapps/extensions/test/xpinstall/browser.ini
@@ -30,7 +30,9 @@ support-files =
 [browser_auth3.js]
 [browser_auth4.js]
 [browser_badargs.js]
+skip-if = fission
 [browser_badargs2.js]
+skip-if = fission
 [browser_badhash.js]
 [browser_badhashtype.js]
 [browser_block_fullscreen_prompt.js]
@@ -65,6 +67,7 @@ skip-if = true # Bug 1449788
 [browser_installchrome.js]
 [browser_localfile.js]
 [browser_localfile2.js]
+skip-if = fission
 [browser_localfile3.js]
 [browser_localfile4.js]
 [browser_newwindow.js]
