--- a/media/audioipc/server/Cargo.toml
+++ b/media/audioipc/server/Cargo.toml
@@ -13,7 +13,7 @@ audio_thread_priority = "0.20.2"
 audioipc = { path = "../audioipc" }
 cubeb-core = "0.6.0"
 futures = "0.1.18"
-lazy_static = "1.2.0"
+once_cell = "1.2.0"
 log = "0.4"
 slab = "0.4"
 tokio = "0.1"
