--- a/tools/profiler/tests/browser/browser.ini
+++ b/tools/profiler/tests/browser/browser.ini
@@ -9,6 +9,7 @@ support-files =
 
 [browser_test_feature_ipcmessages.js]
 [browser_test_feature_jsallocations.js]
+[browser_test_feature_nostacksampling.js]
 [browser_test_feature_preferencereads.js]
 [browser_test_feature_nativeallocations.js]
 [browser_test_profile_single_frame_page_info.js]
