--- a/dom/tests/mochitest/geolocation/mochitest.ini
+++ b/dom/tests/mochitest/geolocation/mochitest.ini
@@ -21,6 +21,7 @@ prefs =
 [test_clearWatch_invalid.html]
 [test_crossorigin_iframe.html]
 support-files = crossorigin_iframe.html
+skip-if = fission #Bug 1580074
 [test_errorcheck.html]
 [test_geolocation_is_undefined_when_pref_is_off.html]
 support-files = test_geolocation_is_undefined_when_pref_is_off_iframe.html
