--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -3071,6 +3071,12 @@
   value: true
   mirror: always
 
+# Media Session API
+- name: dom.media.mediasession.enabled
+  type: bool
+  value: true
+  mirror: always
+
 # WebCodecs API
 - name: dom.media.webcodecs.enabled
   type: RelaxedAtomicBool
